# usb-moded

./: .depend  Makefile.am  Makefile.custom  config-static.h  configure.ac  depend_filter.py
config/: 10-usb-moded-defaults.ini
config/diag/: qa_diagnostic_mode.ini
config/dyn-modes/: adb_mode.ini  android_acm.ini  android_at.ini  connection_sharing-android-connman.ini  connection_sharing.ini  developer_mode-android.ini  diag_mode.ini  diag_mode_old.ini  mtp_mode-android-ffs.ini  mtp_mode-android.ini  pc_suite-android.ini  vfat_android.ini
debian/: changelog  usb_moded.conf
docs/: Makefile.am  usb_moded-doc.txt
rpm/: usb-moded.changes  usb-moded.spec
scripts/: set_usb_mode.sh  usb_mode_user_clear.sh
src/: Makefile.am  com.meego.usb_moded.xml  usb_moded-android.c  usb_moded-android.h  usb_moded-appsync-dbus-private.h  usb_moded-appsync-dbus.c  usb_moded-appsync-dbus.h  usb_moded-appsync.c  usb_moded-appsync.h  usb_moded-common.c  usb_moded-common.h  usb_moded-config-private.h  usb_moded-config.c  usb_moded-config.h  usb_moded-configfs.c  usb_moded-configfs.h  usb_moded-control.c  usb_moded-control.h  usb_moded-dbus-private.h  usb_moded-dbus.c  usb_moded-dbus.h  usb_moded-devicelock.c  usb_moded-devicelock.h  usb_moded-dsme.c  usb_moded-dsme.h  usb_moded-dyn-config.c  usb_moded-dyn-config.h  usb_moded-lock.h  usb_moded-log.c  usb_moded-log.h  usb_moded-mac.c  usb_moded-mac.h  usb_moded-modes.h  usb_moded-modesetting.c  usb_moded-modesetting.h  usb_moded-modules-android.c  usb_moded-modules.c  usb_moded-modules.h  usb_moded-network.c  usb_moded-network.h  (+17 more)
systemd/: adbd-prepare.service  buteo-mtpd.service  usb-moded.conf  usb-moded.service
utils/: udev-search.c
